[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Brian McDonald <bmcdonald916@gmail.com>"]
edition = "2018"

[[bin]]
name = "day-01"
path = "src/day-01.rs"

[[bin]]
name = "day-02"
path = "src/day-02.rs"

[[bin]]
name = "day-03"
path = "src/day-03.rs"

[[bin]]
name = "day-04"
path = "src/day-04.rs"

[[bin]]
name = "day-05"
path = "src/day-05.rs"

[[bin]]
name = "day-06"
path = "src/day-06.rs"

[[bin]]
name = "day-07"
path = "src/day-07.rs"

[[bin]]
name = "day-08"
path = "src/day-08.rs"